--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "lokielse/omnipay-wechatpay",
+  "name": "mofing/omnipay-wechatpay",
   "type": "library",
   "description": "Wechat gateway for Omnipay payment processing library",
   "keywords": [
@@ -14,12 +14,16 @@
     "purchase",
     "微信支付"
   ],
-  "homepage": "https://github.com/lokielse/omnipay-wechatpay",
+  "homepage": "https://github.com/wcj343169893/omnipay-wechatpay",
   "license": "MIT",
   "authors": [
     {
       "name": "Loki Else",
       "email": "lokielse@gmail.com"
+    },
+    {
+      "name": "wen chaojun",
+      "email": "wcj343169893@vip.qq.com"
     }
   ],
   "autoload": {
